[gd_scene load_steps=3 format=3 uid="uid://cpsdtvnkju6xl"]

[ext_resource type="Script" path="res://Scripts/Menu.gd" id="1_pvs06"]
[ext_resource type="Texture2D" uid="uid://dj0ws3pfvm04m" path="res://Resources/logo_uniat.png" id="2_ru5tk"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = 4.0
offset_right = 7.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pvs06")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 207.0
offset_top = 171.0
offset_right = 927.0
offset_bottom = 521.0
theme_override_font_sizes/normal_font_size = 30
text = "Aqui van las instrucciones"

[node name="LogoUniat" type="Sprite2D" parent="."]
position = Vector2(270, 84)
texture = ExtResource("2_ru5tk")

[node name="Regresar" type="Button" parent="."]
offset_left = 34.0
offset_top = 531.0
offset_right = 299.0
offset_bottom = 622.0
theme_override_font_sizes/font_size = 60
text = "Regresar"

[connection signal="pressed" from="Regresar" to="." method="_on_regresar_pressed"]
