[gd_scene load_steps=3 format=3 uid="uid://cobydbr6k7k47"]

[ext_resource type="Script" path="res://Scripts/Menu.gd" id="1_emtkj"]
[ext_resource type="Texture2D" uid="uid://dj0ws3pfvm04m" path="res://Resources/logo_uniat.png" id="2_0y1ft"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = 4.0
offset_right = 7.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_emtkj")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 676.0
offset_top = 152.0
offset_right = 976.0
offset_bottom = 452.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Jugar"

[node name="InstructionsButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Instrucciones"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Salir"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 87.0
offset_top = 171.0
offset_right = 587.0
offset_bottom = 571.0
theme_override_font_sizes/normal_font_size = 30
text = "Física III

Equipo:
José Antonio Romo Terán
Renato González Navarro
Pedro Luis Tello No se que
Diego Hernández García"

[node name="LogoUniat" type="Sprite2D" parent="."]
position = Vector2(270, 84)
texture = ExtResource("2_0y1ft")

[node name="Sprite2D" type="Sprite2D" parent="."]

[connection signal="pressed" from="MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/InstructionsButton" to="." method="_on_instructions_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
